--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>{% block title %}Welcome!{% endblock %}</title>
 
 		<link href="{{ asset("css/bootstrap.min.css") }}" rel="stylesheet"/>
@@ -10,7 +11,7 @@
 		<link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<nav class="navbar navbar-expand-lg navbar-light">
 			<a class="navbar-brand" href="#">Flowershop</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -34,7 +35,12 @@
 				</ul>
 			</div>
 		</nav>
-		{% block body %}{% endblock %}
+		
+		<div class="content">
+			<div class="container-fluid">
+				{% block body %}{% endblock %}
+			</div>
+		</div>
 
 		<script src="{{ asset("js/jquery.min.js") }}"></script>
 		<script src="{{ asset("js/bootstrap.min.js") }}"></script>
