--- a/app/Resources/views/product/index.html.twig
+++ b/app/Resources/views/product/index.html.twig
@@ -1,43 +1,82 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-	<h1>Products list</h1>
+	<div class="row">
+		<div class="col-md-12 r-panel">
+			<div class="r-panel-header p-sm">
+				<h2>Product list</h2>
+			</div>
 
-	<table class="table">
-		<thead>
-			<tr>
-				<th scope="col">Id</th>
-				<th scope="col">Name</th>
-				<th scope="col">Description</th>
-				<th scope="col">Price</th>
-				<th scope="col">Quantity</th>
-				<th scope="col">Actions</th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for product in products %}
-				<tr>
-					<td scope="row"><a href="{{ path('product_show', { 'id': product.id }) }}">{{ product.id }}</a></td>
-					<td>{{ product.name }}</td>
-					<td>{{ product.description }}</td>
-					<td>{{ product.price }}</td>
-					<td>{{ product.inventory ? product.inventory.quantity : '0' }}</td>
-					{% if is_granted('ROLE_ADMIN') %}
-						<td>
-							<a class="btn btn-secondary" href="{{ path('product_show', { 'id': product.id }) }}">show</a>
-							<a class="btn btn-secondary" href="{{ path('product_edit', { 'id': product.id }) }}">edit</a>
-						</td>
-					{% else %}
-						<td>
-							<a class="btn btn-success" href="#">Add To Cart</a>
-						</td>
-					{% endif %}
-				</tr>
-			{% endfor %}
-		</tbody>
-	</table>
-	{% if is_granted('ROLE_ADMIN') %}
-		<a class="btn btn-primary" href="{{ path('product_new') }}">Create a new product</a>
-	{% endif %}
+			<div class="r-panel-body container-fluid">
+				<ul class="row product-list m-t-md">
+					<div class="col-xs-2 col-md-3">
+						<div class="product">
+							<h5 class="p-sm">Rose</h5>
+							<hr>
+							<div class="product-details p-sm">
+								<p>A woody perennial flowering plant of the genus Rosa, in the family Rosaceae, or the flower it bears.</p>
+								<div class="product-action p-t-md">
+									<h6 class="m-t-sm m-b-sm float-left">Price: P200</h6>
+									<button type="button" class="btn btn-primary">Add to cart</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-2 col-md-3">
+						<div class="product">
+
+						</div>
+					</div>
+					<div class="col-xs-2 col-md-3">
+						<div class="product">
+
+						</div>
+					</div>
+					<div class="col-xs-2 col-md-3">
+						<div class="product">
+
+						</div>
+					</div>
+				</ul>
+				{% if is_granted('ROLE_ADMIN') %}
+					<a class="btn btn-primary" href="{{ path('product_new') }}">Create a new product</a>
+				{% endif %}
+			</div>
+
+			{# <table class="table">
+				<thead>
+					<tr>
+						<th scope="col">Id</th>
+						<th scope="col">Name</th>
+						<th scope="col">Description</th>
+						<th scope="col">Price</th>
+						<th scope="col">Quantity</th>
+						<th scope="col">Actions</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for product in products %}
+						<tr>
+							<td scope="row"><a href="{{ path('product_show', { 'id': product.id }) }}">{{ product.id }}</a></td>
+							<td>{{ product.name }}</td>
+							<td>{{ product.description }}</td>
+							<td>{{ product.price }}</td>
+							<td>{{ product.inventory ? product.inventory.quantity : '0' }}</td>
+							{% if is_granted('ROLE_ADMIN') %}
+								<td>
+									<a class="btn btn-secondary" href="{{ path('product_show', { 'id': product.id }) }}">show</a>
+									<a class="btn btn-secondary" href="{{ path('product_edit', { 'id': product.id }) }}">edit</a>
+								</td>
+							{% else %}
+								<td>
+									<a class="btn btn-success" href="#">Add To Cart</a>
+								</td>
+							{% endif %}
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table> #}
+		</div>
+	</div>
 	
 {% endblock %}
