[User] added address and contact details field

--- a/src/CoreBundle/Resources/views/Registration/index.html.twig
+++ b/src/CoreBundle/Resources/views/Registration/index.html.twig
@@ -20,6 +20,12 @@
 					{{ form_row(form.lastName, {'attr': {'class': 'form-box'}}) }}
 				</div>
 				<div class="col-md-12 form-group">
+					{{ form_row(form.address, {'attr': {'class': 'form-box'}}) }}
+				</div>
+				<div class="col-md-12 form-group">
+					{{ form_row(form.contactDetails, {'attr': {'class': 'form-box'}}) }}
+				</div>
+				<div class="col-md-12 form-group">
 					{{ form_row(form.plainPassword.first, {'attr': {'class': 'form-box'}}) }}
 				</div>
 				<div class="col-md-12 form-group">
