--- a/src/CoreBundle/Resources/views/Registration/index.html.twig
+++ b/src/CoreBundle/Resources/views/Registration/index.html.twig
@@ -35,7 +35,7 @@
 					<input type="submit" class="btn btn-block btn-primary" value="Register" />
 				</div>
 				<div class="col-md-12 form-group">
-					<a href="{{ path('fos_user_security_login') }}" class="btn btn-block btn-default">Back</a>
+					<a href="{{ path('product_index') }}" class="btn btn-block btn-default">Back</a>
 				</div>
 			</div>
 		{{ form_end(form) }}
