--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,10 +26,10 @@
 					</li>
 				</ul>
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link" href="#">Cart</a>
-					</li>
 					{% if app.user %}
+						<li class="nav-item">
+							<a class="nav-link" href="{{ path('cart_index', {'id': app.user.cart.id}) }}">Cart</a>
+						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="{{ path('fos_user_profile_show') }}">{{ app.user.firstName }} {{ app.user.lastName }}</a>
 						</li>
