[Cart] Added removal of cart item

--- a/src/SalesBundle/Resources/views/cart/index.html.twig
+++ b/src/SalesBundle/Resources/views/cart/index.html.twig
@@ -15,17 +15,32 @@
                             <th scope="col">Quantity</th>
                             <th scope="col">Price</th>
                             <th scope="col">Total</th>
+                            <th scope="col">Action</th>
                         </tr>
                     </thead>
                     <tbody>
+                        {% set grandTotal = 0 %}
                         {% for item in cart.items %}
                             <tr>
                                 <td>{{ item.product.name }}</td>
                                 <td>{{ item.quantity }}</td>
                                 <td>{{ item.product.price }}</td>
                                 <td>{{ item.quantity * item.product.price }}</td>
+                                <td>
+                                    <form action="{{ path('cart_remove_item', {'id': item.id}) }}" method="post">
+                                        <button type="submit" class="btn btn-default">Remove Item</button>
+                                    </form>
+                                </td>
                             </tr>
+                            {% set grandTotal = grandTotal + (item.quantity * item.product.price) %}
                         {% endfor %}
+                        <tr>
+                            <td><strong>Total</strong></td>
+                            <td></td>
+                            <td></td>
+                            <td>{{ grandTotal}}</td>
+                            <td></td>
+                        </tr>
                     </tbody>
                 </table>
 			</div>
