[Product] display out of stock if  no stocks

--- a/src/InventoryBundle/Resources/views/product/index.html.twig
+++ b/src/InventoryBundle/Resources/views/product/index.html.twig
@@ -23,12 +23,16 @@
 								<div class="product-details p-sm">
 									<p class="product-description">{{ product.description }}</p>
 									<h6 class="m-t-sm m-b-sm">Price: {{ product.price }}</h6>
-									<div class="product-action p-t-md">
-										{{ form_start(form, {'action': path('cart_add_item', {'id': product.id}), 'method': 'POST'}, { 'attr' : { 'class': 'form-inline' } }) }}
-											{{ form_row(form.quantity, {'attr': {'class': 'form-control', 'placeholder': 'Quantity'}}) }}
-											<button type="submit" class="btn btn-primary m-t-sm" data-toggle="modal">Add to cart</button>
-										{{ form_end(form) }}
-									</div>
+									{% if product.inventory.quantity > 0 %}
+										<div class="product-action p-t-md">
+											{{ form_start(form, {'action': path('cart_add_item', {'id': product.id}), 'method': 'POST'}, { 'attr' : { 'class': 'form-inline' } }) }}
+												{{ form_row(form.quantity, {'attr': {'class': 'form-control', 'placeholder': 'Quantity'}}) }}
+												<button type="submit" class="btn btn-primary m-t-sm" data-toggle="modal">Add to cart</button>
+											{{ form_end(form) }}
+										</div>
+									{% else %}
+										<h4>Out of stock</h4>
+									{% endif %}
 								</div>
 							</div>
 						</div>
