--- a/src/SalesBundle/Resources/views/cart/index.html.twig
+++ b/src/SalesBundle/Resources/views/cart/index.html.twig
@@ -24,8 +24,8 @@
 							<tr>
 								<td>{{ item.product.name }}</td>
 								<td>{{ item.quantity }}</td>
-								<td>{{ item.product.price }}</td>
-								<td>{{ item.quantity * item.product.price }}</td>
+								<td>{{ item.product.price | number_format(2)}}</td>
+								<td>{{ (item.quantity * item.product.price) | number_format(2) }}</td>
 								<td>
 									<form action="{{ path('cart_remove_item', {'id': item.id}) }}" method="post">
 										<button type="submit" class="btn btn-default">Remove Item</button>
@@ -38,7 +38,7 @@
 							<td><strong>Total</strong></td>
 							<td></td>
 							<td></td>
-							<td>{{ grandTotal}}</td>
+							<td>{{ grandTotal | number_format(2)}}</td>
 							<td></td>
 						</tr>
 					</tbody>
