--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,7 +33,11 @@
 				<ul class="navbar-nav ml-auto">
 					{% if app.user %}
 						<li class="nav-item">
-							<a class="nav-link" href="{{ path('cart_index', {'id': app.user.cart.id}) }}">Cart</a>
+							{% for cart in app.user.carts  %}
+								{% if cart.isActive == true %}
+									<a class="nav-link" href="{{ path('cart_index', {'id': cart.id}) }}">Cart</a>
+								{% endif %}
+							{% endfor %}
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="{{ path('fos_user_profile_show') }}">{{ app.user.firstName }} {{ app.user.lastName }}</a>
