--- a/src/SalesBundle/Resources/views/cart/index.html.twig
+++ b/src/SalesBundle/Resources/views/cart/index.html.twig
@@ -43,9 +43,13 @@
 						</tr>
 					</tbody>
 				</table>
-				<form action="{{ path('generate_sales_order') }}" method="post">
-					<button type="submit" class="btn btn-default">Checkout</button>
-				</form>
+				{% for cart in app.user.carts  %}
+					{% if cart.isActive == true %}
+						<form action="{{ path('payment_new', {'id': cart.id}) }}" method="post">
+							<button type="submit" class="btn btn-default">Checkout</button>
+						</form>
+					{% endif %}
+				{% endfor %}
 			</div>
 
 		</div>
