Added number of cart items in navbar

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -35,7 +35,12 @@
 						<li class="nav-item">
 							{% for cart in app.user.carts  %}
 								{% if cart.isActive == true %}
-									<a class="nav-link" href="{{ path('cart_index', {'id': cart.id}) }}">Cart</a>
+									<a class="nav-link" href="{{ path('cart_index', {'id': cart.id}) }}">
+										Cart
+										{% if cart.items|length > 0 %}
+											<span class="badge badge-pill badge-danger"> {{ cart.items|length }} </span>
+										{% endif %}
+									</a>
 								{% endif %}
 							{% endfor %}
 						</li>
