--- a/src/InventoryBundle/Resources/views/product/show.html.twig
+++ b/src/InventoryBundle/Resources/views/product/show.html.twig
@@ -1,38 +1,39 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Product</h1>
-
-    <table>
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ product.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ product.name }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ product.description }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ product.price }}</td>
-            </tr>
-            <tr>
-                <th>Quantity</th>
-                <td>{{ product.inventory ? product.inventory.quantity : '0' }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a class="btn btn-primary" href="{{ path('product_edit', { 'id': product.id }) }}">Edit</a>
-    <a class="btn btn-secondary" href="{{ path('product_index') }}">Back to the list</a>
-    
-    {{ form_start(delete_form) }}
-        <input class="btn btn-danger" type="submit" value="Delete">
-    {{ form_end(delete_form) }}
-        
+	<div class="row">
+		<div class="col-md-6 mx-auto r-panel">
+			<a class="btn btn-primary float-left m-t-sm" href="{{ path('product_index') }}">
+				<i class="fa fa-angle-left"></i>
+			</a>
+			<div class="r-panel-header p-sm">
+				<h2>{{ product.name }}</h2>
+			</div>
+			<div class="r-panel-body container-fluid">
+				<div class="p-md">
+					<p>{{ product.description }}</p>
+				</div>
+			</div>
+			<div class="r-panel-footer">
+				<hr>
+				{% if is_granted('ROLE_ADMIN') %}
+					<div class="float-left m-t-sm">
+						<a class="btn btn-primary inline" href="{{ path('product_edit', { 'id': product.id }) }}">
+							<i class="fa fa-edit"></i>
+						</a>
+						{{ form_start(delete_form, {'attr': {'class': 'inline'}}) }}
+							<button class="btn btn-danger" type="submit" value="Delete">
+								<i class="fa fa-trash"></i>
+							</button>
+						{{ form_end(delete_form) }}
+					</div>
+				{% endif %}
+				<div class="p-md align-right">
+					<p class="inline m-r-md"><strong>Price: </strong>{{ product.price }}</p>
+					<p class="inline"><strong>Available: </strong>{{ product.inventory ? product.inventory.quantity : '0' }}</p>
+				</div>
+			</div>
+		</div>
+	</div>
+		
 {% endblock %}
