--- a/src/InventoryBundle/Resources/views/product/edit.html.twig
+++ b/src/InventoryBundle/Resources/views/product/edit.html.twig
@@ -1,30 +1,37 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Product edit</h1>
-
-    {{ form_start(edit_form) }}
-        <div class="form-group">
-            {{ form_label(edit_form.name) }}
-            {{ form_widget(edit_form.name) }}
-            {{ form_errors(edit_form.name) }}
-        </div>
-        <div class="form-group">
-            {{ form_label(edit_form.description) }}
-            {{ form_widget(edit_form.description) }}
-            {{ form_errors(edit_form.description) }}
-        </div>
-        <div class="form-group">
-            {{ form_label(edit_form.price) }}
-            {{ form_widget(edit_form.price) }}
-            {{ form_errors(edit_form.price) }}
-        </div>
-        <button class="btn btn-primary" type="submit">Edit</button>
-    {{ form_end(edit_form) }}
-    <a class="btn btn-secondary" href="{{ path('product_index') }}">Back to the list</a>
-        
-    {{ form_start(delete_form) }}
-        <input class="btn btn-danger" type="submit" value="Delete">
-    {{ form_end(delete_form) }}
+    <div class="row">
+		<div class="col-md-4 mx-auto r-panel">
+			<div class="r-panel-header p-sm">
+				<h2>Edit Product</h2>
+			</div>
+			<div class="r-panel-body container-fluid">
+				{{ form_start(edit_form, {'attr': {'class': 'row align-left m-t-md'}}) }}
+					<div class="col-md-12 form-group">
+						{{ form_label(edit_form.name) }}
+						{{ form_widget(edit_form.name, {'attr': {'class': 'form-box'}}) }}
+						{{ form_errors(edit_form.name) }}
+					</div>
+					<div class="col-md-12 form-group">
+						{{ form_label(edit_form.description) }}
+						{{ form_widget(edit_form.description, {'attr': {'class': 'form-box'}}) }}
+						{{ form_errors(edit_form.description) }}
+					</div>
+					<div class="col-md-12 form-group">
+						{{ form_label(edit_form.price) }}
+						{{ form_widget(edit_form.price, {'attr': {'class': 'form-box'}}) }}
+						{{ form_errors(edit_form.price) }}
+					</div>
+					<div class="col-md-12 form-group">
+						<button class="btn btn-primary btn-block" type="submit">Edit</button>
+					</div>
+					<div class="col-md-12 form-group">
+						<a href="{{ path('product_index') }}" class="btn btn-block btn-danger">Cancel</a>
+					</div>
+				{{ form_end(edit_form) }}
+			</div>
+		</div>
+	</div>
         
 {% endblock %}
