--- a/src/InventoryBundle/Resources/views/inventory/new.html.twig
+++ b/src/InventoryBundle/Resources/views/inventory/new.html.twig
@@ -1,18 +1,31 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Add Stocks</h1>
+	<div class="row">
+		<div class="col-md-4 mx-auto r-panel">
+			<div class="r-panel-header p-sm">
+				<h2>Add Stocks</h2>
+			</div>
 
-    {{ form_start(form) }}
-        <div>
-            Product: {{ product.name }}
-        </div>
-        <div class="form-group">
-			{{ form_label(form.quantity) }}
-			{{ form_widget(form.quantity) }}
-			{{ form_errors(form.quantity) }}
+			<div class="r-panel-body container-fluid"> 
+				{{ form_start(form, {'attr': {'class': 'row align-left m-t-md'}}) }}
+					<div class="col-md-12 form-group text-center">
+						<h6 class="inline">Product: </h6>
+						<p class="inline">{{ product.name }}</p>
+					</div>
+					<div class="col-md-12 form-group">
+						{{ form_label(form.quantity) }}
+						{{ form_widget(form.quantity, {'attr': {'class': 'form-box'}}) }}
+						{{ form_errors(form.quantity) }}
+					</div>
+					<div class="col-md-6 form-group">
+						<button class="btn btn-primary btn-block" type="submit">Add</button>
+					</div>
+					<div class="col-md-6 form-group">
+						<a class="btn btn-danger btn-block" href="{{ path('product_show', { 'id': product.id }) }}">Back</a>
+					</div>
+				{{ form_end(form) }}
+			</div>
 		</div>
-        <button class="btn btn-primary" type="submit">Add</button>
-    {{ form_end(form) }}
-	<a class="btn btn-secondary"  href="{{ path('product_show', { 'id': product.id }) }}">Back</a>
+	</div>
 {% endblock %}
