Finished new payment design

--- a/src/SalesBundle/Resources/views/cart/index.html.twig
+++ b/src/SalesBundle/Resources/views/cart/index.html.twig
@@ -45,7 +45,7 @@
 				</table>
 				{% for cart in app.user.carts  %}
 					{% if cart.isActive == true %}
-						<form action="{{ path('payment_new', {'id': cart.id}) }}" method="post">
+						<form action="{{ path('payment_new', {'id': cart.id}) }}" method="get">
 							<button type="submit" class="btn btn-primary">Checkout</button>
 						</form>
 					{% endif %}
