--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -33,7 +33,7 @@
 							{% for cart in app.user.carts  %}
 								{% if cart.isActive == true %}
 									<a class="nav-link" href="{{ path('cart_index', {'id': cart.id}) }}">
-										Cart
+										<i class="fa fa-shopping-cart"></i>
 										{% if cart.items|length > 0 %}
 											<span class="badge badge-pill badge-danger"> {{ cart.items|length }} </span>
 										{% endif %}
