--- a/src/InventoryBundle/Resources/views/inventory/new.html.twig
+++ b/src/InventoryBundle/Resources/views/inventory/new.html.twig
@@ -9,9 +9,9 @@
 
 			<div class="r-panel-body container-fluid"> 
 				{{ form_start(form, {'attr': {'class': 'row align-left m-t-md'}}) }}
-					<div class="col-md-12 form-group text-center">
-						<h6 class="inline">Product: </h6>
-						<p class="inline">{{ product.name }}</p>
+					<div class="col-md-12 form-group">
+						<label>Product: </label>
+						<p>{{ product.name }}</p>
 					</div>
 					<div class="col-md-12 form-group">
 						{{ form_label(form.quantity) }}
