--- a/web/css/style.css
+++ b/web/css/style.css
@@ -3189,19 +3189,19 @@ hr {
   padding-right: 30px;
 }
 
-.p-i-l-xs {
+.p-i-r-xs {
   padding: 5px 0 5px 5px;
 }
 
-.p-i-l-sm {
+.p-i-r-sm {
   padding: 10px 0 10px 10px;
 }
 
-.p-i-l-md {
+.p-i-r-md {
   padding: 20px 0 20px 20px;
 }
 
-.p-i-l-lg {
+.p-i-r-lg {
   padding: 30px 0 30px 30px;
 }
 
