--- a/src/InventoryBundle/Resources/views/product/show.html.twig
+++ b/src/InventoryBundle/Resources/views/product/show.html.twig
@@ -8,6 +8,7 @@
 			</a>
 			<div class="r-panel-header p-sm">
 				<h2>{{ product.name }}</h2>
+				<img src="{{ asset('uploads/images/' ~ product.image) }}">
 			</div>
 			<div class="r-panel-body container-fluid">
 				<div class="p-md">
